# wit_owo

./: .gitignore  .nvim.lua  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENCE-APACHE  LICENCE-MIT  README.md  SECURITY.md  objectives.md
.github/: CODEOWNERS  config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  vulnerability-report.md
.github/workflows/: auto.yml  ci.yml  rust-clippy.yml  rust.yml
.trunk/: trunk.yaml
.trunk/configs/: .rustfmt.toml
assets/: test.raw
src/: constants.rs  error.rs  lib.rs  prelude.rs  utils.rs
src/api/: dictation.rs  message.rs  mod.rs  speech.rs  synthesize.rs  voice.rs
src/model/: client.rs  context.rs  dictation.rs  entities.rs  intents.rs  language.rs  message.rs  mod.rs  speech.rs  synthesize.rs  traits.rs  voice.rs  voices.rs
src/model/client/: blocking.rs
src/model/dictation/: blocking.rs
src/model/language/: blocking.rs
src/model/message/: blocking.rs
src/model/server/: blocking.rs  entities.rs  mod.rs  prelude.rs
src/model/server/entities/: blocking.rs
src/model/speech/: blocking.rs
src/model/synthesize/: blocking.rs
src/model/values/: datetime.rs  location.rs  mod.rs
src/model/voices/: blocking.rs
src/utils/: json.rs  mod.rs  tests.rs
tools/: cargo-toml.d.ts  deno.json  publish.ts
