[package]
name = "wit_owo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"], optional = true }
url = { version = "2.5.4", features = ["serde"] }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
blocking = ["reqwest/blocking"]

[dev-dependencies]
lipsum = "0.9.1"
