[package]
name = "wit_owo"
version = "1.0.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["Clifton Toaster Reid <clifton.toaster.reid@proton.me>"]
categories = ["api-bindings", "text-processing"]
description = "A Rust library for interacting with the Wit.ai API."
documentation = "https://docs.rs/wit_owo/latest/wit_owo/"
repository = "https://github.com/cliftontoaster-reid/wit_owo"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["wit-ai", "api", "nlp", "nlu"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"], optional = true }
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
blocking = ["reqwest/blocking"]

[dev-dependencies]
dotenv = "0.15.0"
lipsum = "0.9.1"
