[package]
name = "wit_owo"
version = "1.1.3"
edition = "2024"
authors = ["Clifton Toaster Reid <clifton.toaster.reid@proton.me>"]
categories = ["api-bindings", "text-processing"]
description = "A Rust library for interacting with the Wit.ai API."
documentation = "https://docs.rs/wit_owo/latest/wit_owo/"
repository = "https://github.com/cliftontoaster-reid/wit_owo"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["wit-ai", "api", "nlp", "nlu"]
rust-version = "1.85.0"
exclude = [".github", ".cargo", "tools", ".vscode"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
]

[dependencies]
async-stream = { version = "0.3.6", optional = true }
futures = { version = "0.3.31", optional = true }
tokio = { version = "1.45.0", features = ["full"], optional = true }

chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
reqwest = { version = "0.12.15", features = [
  "json",
  "stream",
  "native-tls-alpn",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"
bytes = "1.10.1"

[features]
default = ["async"]
async = ["dep:tokio", "dep:async-stream", "dep:futures"]
blocking = ["reqwest/blocking"]

[dev-dependencies]
dotenvy = "0.15.0"
lipsum = "0.9.1"
